--- a/res/MessageBundle_de.properties
+++ b/res/MessageBundle_de.properties
@@ -8,6 +8,7 @@ Password = Passwort
 Cancel = Abbruch
 Save = Speichern
 Login = Anmelden
+Add = Hinzufügen
 
 LooksLikeEveryt = Es sieht so aus, dass alles installiert ist und funktioniert. Jetzt kannst du deine Einstellungen für einen schnellen Start konfigurieren. Erstelle zuerst dein Benutzerkonto.
 LetSGetStarted = Lass uns anfangen
@@ -19,3 +20,11 @@ Create_{0} = {0} hinzufügen
 
 DataFile = Datendatei
 FileName = Dateiname
+EMailAccount = E-Mail-Konto
+
+Signature = Signatur
+KeyStoreFilename = Dateipfad von KeyStore
+KeystorePassword = Passwort von KeyStore
+PrivateKeyPassw = Passwort von PrivateKey
+Location = Ort der Signatur
+Reason = Grund der Singnatur
